[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "practical-reasoning"
version = "0.0.1"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"}
]
description = "Practical reasoning"
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

keywords = ["practical-reasoning"]

dependencies = [
    "pyyaml == 6.0.3"
]

[project.scripts]
practical-reasoning = "practical_reasoning.cli:run"

[project.urls]
"Homepage" = "https://github.com/org_name/practical-reasoning"